# dotfiles

./: .commitlintrc.yml  .env  .envrc  .gitattributes  .gitignore  .lfsconfig  .opencommit-commitlint  .pre-commit-config.yaml  .travis.yml  README.md  bash_aliases  bash_profile  bashrc  bashrc_local  get-platform  git_update_dotfiles.bash  gitconfig  gitignore_global  init-repo  inputrc  install_dotfiles  profile  pyproject.toml  requirements_dotfiles.txt  screenrc  setup  setup.yml  setup_dotfiles  setup_dotfiles.bash  site.yml  tcshrc  tmux.conf  update_dotfiles.bash  vimrc  xterm-256color.ti
.circleci/: config.yml
.github/workflows/: ci.yml
bashrc.d/: bash_aliases  cdhist  emoji-log  git-completion.bash  ssh-reclaim
config/: .gitignore
config/powerline/: config.json
files/: .bashrc  .gitconfig  .gitignore_global  .inputrc  .profile  .screenrc  .tigrc  .tmux.conf  .vimrc  .wezterm.lua
files/.bashrc.d/: 02-functions  03-aliases  03-complete-alias  04-aliases  (+21 more)
fonts/: Library
lib/: traceback.sh
scripts/: poll-ci-result.py  poll-circleci.sh
setup.d/: 00-dotfiles  01-lc-gen  01-update-3rd-resources  02-user-perm  03-bcache-setup  19-local-repo  20-basic-apt  21-vim-plugins  22-tmux-plugins  23-tailscale  24-shfmt  25-direnv.sh  50-mise  51-node-apps  52-go-apps  53-python-apps  54-rust-apps  55-flatpak-apps  56-brew-apps  57-appman-apps  57-deb-get-apps  57-non-apt-debs  61-flatpak-apps  70-fcitx5-autostart  70-powerline  71-vscode  72-bcompare  73-docker  74-kubectl  74-rclone  75-kubectl  75-rclone  76-helm  77-mattermost  80-desktop-configs  common-lib
(+78 files in other folders)
